--- a/practice1/events.xaml
+++ b/practice1/events.xaml
@@ -26,22 +26,21 @@
             <RadioButton Click="RadioButton_Click_1" FontFamily="/Fonts/#Steppe" Margin="0,10,0,0" Style="{StaticResource MenuButtonTheme}" Height="40" Width="133" Content="Пропуски" VerticalAlignment="Center" HorizontalAlignment="Left"  Foreground="White"  FontSize="9" ></RadioButton>
             <RadioButton Click="RadioButton_Click_2" FontFamily="/Fonts/#Steppe" Margin="0,10,0,0"  Style="{StaticResource MenuButtonTheme}" Height="40" Width="133" Content="Выйти" VerticalAlignment="Center" HorizontalAlignment="Left"  Foreground="White"  FontSize="9"  ></RadioButton>
         </StackPanel>
-        <ListBox SelectionChanged="lbparent_SelectionChanged"  Name="lbevents"  Grid.Row="1" Grid.Column="1"  Background="#22202f"  ItemsSource="{Binding database.events}"  >
+        <ListBox SelectionChanged="lbparent_SelectionChanged"   Name="lbevents"  Grid.Row="1" Grid.Column="1"  Background="#22202f"  ItemsSource="{Binding database.events}"  >
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock FontFamily="/Fonts/#Steppe" Foreground="White"  FontWeight="Light"  FontSize="14">
-                            <Run Text="Название" ></Run>
-                         
-                           <Run Text="{Binding name}"></Run>
-                           <Run Text="Место" ></Run>
-                           <Run Text="{Binding place}"></Run>
-                            <LineBreak></LineBreak>
-                            <Run Text="Начало" ></Run>
+                    <TextBlock  Margin="0,8,0,0"  FontFamily="/Fonts/#Steppe" Foreground="White"  FontWeight="Light"  FontSize="14">
+                           <Run FontSize="16" Text="{Binding name}"></Run>
+                           <LineBreak></LineBreak> 
+                            <Run  Text="{Binding date2}" ></Run>
+                            <Run  Text="C" ></Run>
                             <Run Text="{Binding start1}" ></Run>
-                            <LineBreak></LineBreak>
-                            <Run Text="Конец" ></Run>
+                            <Run Text="До" ></Run>
                             <Run Text="{Binding end1}"></Run>
-                            
+                             <LineBreak></LineBreak>
+                            <Run Text="Место" ></Run>
+                            <Run Text="{Binding place}"></Run>
+
                     </TextBlock>
                 </DataTemplate>
             </ListBox.ItemTemplate>
