--- a/practice1/PageForzav.xaml
+++ b/practice1/PageForzav.xaml
@@ -1,32 +1,12 @@
-﻿<Page x:Class="practice1.PageForzav"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:practice1"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageForzav">
-
-    <Grid Background="#272537" >
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition ></ColumnDefinition>
-            <ColumnDefinition Width="3*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition Height="6*"></RowDefinition>
-        </Grid.RowDefinitions>
-        <StackPanel Name="sp" Grid.Row="1">
-            <RadioButton FontFamily="/Fonts/#Steppe"  Style="{StaticResource MenuButtonTheme}" Height="40" Width="133" Content="Воспитатели"    VerticalAlignment="Center" HorizontalAlignment="Left"  Foreground="White"  FontSize="9" ></RadioButton>
-            <RadioButton FontFamily="/Fonts/#Steppe" Margin="0,10,0,0" Style="{StaticResource MenuButtonTheme}" Height="40" Width="133" Content="Посмотреть события" VerticalAlignment="Center" HorizontalAlignment="Left"  Foreground="White"  FontSize="9" ></RadioButton>
-            <RadioButton FontFamily="/Fonts/#Steppe" Margin="0,10,0,0" Style="{StaticResource MenuButtonTheme}" Height="40" Width="133" Content="Дети" VerticalAlignment="Center" HorizontalAlignment="Left"  Foreground="White"  FontSize="9" ></RadioButton>
-            <RadioButton FontFamily="/Fonts/#Steppe" Margin="0,10,0,0"  Style="{StaticResource MenuButtonTheme}" Height="40" Width="133" Content="Выйти" VerticalAlignment="Center" HorizontalAlignment="Left"  Foreground="White"  FontSize="9"  ></RadioButton>
-        </StackPanel>
-        <StackPanel Name="sp1" Grid.Row="1" Grid.Column="1">
+﻿<Window x:Class="practice1.PageForzav"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:practice1"
+        mc:Ignorable="d"
+        Title="PageForzav" Height="450" Width="800">
+    <Grid>
         
-        </StackPanel>
     </Grid>
-
-</Page>
+</Window>
