--- a/practice1/Message.xaml
+++ b/practice1/Message.xaml
@@ -14,7 +14,7 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <TextBlock FontSize="14" Name="tbmes" Text="This is a notification message." FontFamily="/Fonts/#Montserrat" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
+            <TextBlock TextWrapping="Wrap" FontSize="14" Name="tbmes" Text="This is a notification message." FontFamily="/Fonts/#Montserrat" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
 
             <Button VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource ButtonStyle1}" Foreground="White" Grid.Row="1" Content="Закрыть" Width="75" Margin="0 10 0 0"  Click="CloseButton_Click"/>
         </Grid>
