--- a/practice1/PageForzav.xaml
+++ b/practice1/PageForzav.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="practice1.PageForzav"
+﻿<Page x:Class="practice1.PageForzav"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,94 @@
         xmlns:local="clr-namespace:practice1"
         mc:Ignorable="d"
         Title="PageForzav" Height="450" Width="800">
-    <Grid>
-        
+    <Grid Background="#272537">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition ></ColumnDefinition>
+            <ColumnDefinition Width="3*"></ColumnDefinition>
+            <ColumnDefinition Width="2*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="6*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Frame Grid.RowSpan="2" Grid.ColumnSpan="3" Name="frame" ></Frame>
+        <TextBlock  Margin="5,25,0,0" FontFamily="/Fonts/#Gogh" Foreground="White"  FontSize="11" Name="tbname" ></TextBlock>
+        <StackPanel Name="sp" Grid.Row="1">
+            <RadioButton Click="RadioButton_Click" FontFamily="/Fonts/#Steppe" Margin="0,10,0,0"  Style="{StaticResource MenuButtonTheme}" Height="40" Width="133" Content="Выйти" VerticalAlignment="Center" HorizontalAlignment="Left"  Foreground="White"  FontSize="9"  ></RadioButton>
+        </StackPanel>
+        <ListBox  SelectionChanged="lbkids_SelectionChanged" Grid.Row="1" Grid.Column="1"  Background="#22202f"  ItemsSource="{Binding database.kids}"  Name="lbkids" >
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock FontFamily="/Fonts/#Steppe" Foreground="White"  FontWeight="Light"  FontSize="13">
+                       <Run Text="{Binding surname}"> </Run>
+                       <Run Text="{Binding name}" ></Run>                    
+                       <Run Text="{Binding patronymic}" ></Run>
+                        <Run Text="{Binding namegroup}" ></Run>
+                       <LineBreak></LineBreak>
+                    </TextBlock>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <StackPanel  Name="sp1" Grid.Column="1">
+            <TextBlock  Margin="0,10,0,0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/Fonts/#Gogh" Foreground="White"  FontSize="11" Text="Выберите группу" ></TextBlock>
+            <ComboBox SelectionChanged="cbgroup_SelectionChanged" Margin="0,10,0,0" Grid.Column="1" Height="25" Width="150" FontFamily="/Fonts/#Steppe" Name="cbgroup" ItemsSource="{Binding database.groups}"  Style="{DynamicResource ComboBoxStyle1}" >
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock FontFamily="/Fonts/#Steppe" Foreground="White"  FontWeight="Light"  FontSize="13">
+                         <Run Text="{Binding number}"> </Run>
+                         <Run Text="{Binding avgage}" ></Run>
+                        </TextBlock>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+        </StackPanel>
+        <StackPanel Name="lb" Margin="10,0,0,0"  Grid.Column="1" HorizontalAlignment="Left">
+            <TextBlock  Margin="0,10,0,0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/Fonts/#Gogh" Foreground="White"  FontSize="11" Text="Сбросить фильтр" ></TextBlock>
+            <Button  Click="Button_Click"  BorderThickness="0" Background="#272537" Height="35" Width="35" >
+                <Image Source="/Image/krest.png" ></Image>
+            </Button>
+        </StackPanel>
+        <StackPanel Name="lb1" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="2">
+        <TextBlock   FontFamily="/Fonts/#Gogh" Foreground="White" VerticalAlignment="Bottom" FontSize="11" Grid.Column="2" HorizontalAlignment="Right"  Text="Сбросить фильтр"></TextBlock>
+        <Button Margin="0,0,27,0" Click="Button_Click_2" Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" BorderThickness="0" Background="#272537"  Height="35" Width="35" HorizontalAlignment="Right"  >
+            <Image Source="/Image/krest.png" ></Image>
+        </Button>
+        </StackPanel>
+        <StackPanel Name="sp2" Margin="5,0,0,0" HorizontalAlignment="Left" Grid.Row="1" Grid.Column="2">
+            <Label FontFamily="/Fonts/#Gogh" Margin="10" FontWeight="Bold" Grid.ColumnSpan="2"  HorizontalAlignment="Center" Foreground="White" >Имя</Label>
+            <Label FontFamily="/Fonts/#Gogh" Margin="10" FontWeight="Bold" Grid.ColumnSpan="2"  HorizontalAlignment="Center" Foreground="White" >Фамилия</Label>
+            <Label FontFamily="/Fonts/#Gogh" Margin="10" FontWeight="Bold" Grid.ColumnSpan="2"  HorizontalAlignment="Center" Foreground="White" >Отчество</Label>
+            <Label FontFamily="/Fonts/#Gogh" Margin="10" FontWeight="Bold" Grid.ColumnSpan="2"  HorizontalAlignment="Center" Foreground="White" >Группа</Label>
+        </StackPanel>
+        <StackPanel Name="sp3" Margin="5,-10,0,0" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="2">
+            <TextBox Margin="10,20,0,0" VerticalContentAlignment="Center" Name="tbnamekid" Foreground="White" Height="25" Width="100" FontFamily="/Fonts/#Steppe" >
+                <TextBox.Background>
+                    <ImageBrush >
+                    </ImageBrush>
+                </TextBox.Background>
+            </TextBox>
+            <TextBox Margin="10,20,0,0" VerticalContentAlignment="Center" Name="tbsurnamekid" Foreground="White" Height="25" Width="100" FontFamily="/Fonts/#Steppe" >
+                <TextBox.Background>
+                    <ImageBrush >
+                    </ImageBrush>
+                </TextBox.Background>
+            </TextBox>
+            <TextBox Margin="10,20,0,0" VerticalContentAlignment="Center" Name="tbpatronymickid" Foreground="White" Height="25" Width="100" FontFamily="/Fonts/#Steppe" >
+                <TextBox.Background>
+                    <ImageBrush >
+                    </ImageBrush>
+                </TextBox.Background>
+            </TextBox>
+            <ComboBox VerticalContentAlignment="Center" ItemsSource="{Binding database.groups}" DisplayMemberPath="number" FontFamily="/Fonts/#Steppe" Margin="10,25,0,0" Style="{DynamicResource ComboBoxStyle1}" Height="25" Name="cbgroup1" ></ComboBox>
+        </StackPanel>
+        <StackPanel  Margin="5,30,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="2" Grid.Row="1">
+            <Button Name="butup" Click="update" FontFamily="/Fonts/#Steppe"   Style="{DynamicResource ButtonStyle1}" Foreground="White" Height="30" Width="120" Content="Обновить" ></Button>
+        </StackPanel >
+        <StackPanel  Margin="0,30,15,0" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Grid.Row="1" >
+            <Button Name="butdel" Click="delete" FontFamily="/Fonts/#Steppe"   Style="{DynamicResource ButtonStyle1}" Foreground="White" Height="30" Width="120" Content="Удалить" ></Button>
+        </StackPanel>
+        <Button Click="Button_Click_1" Grid.Column="2" Grid.Row="1" VerticalAlignment="Center"  HorizontalAlignment="Left" Margin="5,120,0,0" FontFamily="/Fonts/#Steppe" Name="butcr"  Style="{DynamicResource ButtonStyle1}" Foreground="White" Height="30" Width="120" Content="Создать"></Button>
     </Grid>
-</Window>
+   
+    
+</Page>
